# alacritty-theme-manager

./: CLAUDE.md  Cargo.toml  ISSUES.md  README.md
src/: app.rs  config.rs  main.rs  ui.rs
